Вернул работу методов к вызовам других микросервисов по сети в транзакции, сохранив другие рекомендации ревьюера